--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Repositório GEOGRÁFICO
 logo: /assets/img/logo.png
 description: Repositório Geográfico.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
 github:
